--- a/skillup/site-lending/index.html
+++ b/skillup/site-lending/index.html
@@ -12,32 +12,18 @@
 
 <body>
     <section class="promo">
-        <div class="container">
+        <div class="top-line">
             <div class="logo">
-                <img src="./icons/logo.png" alt="logo" class="logo_img">
+                <img src="./icons/WebStudio.png" alt="logo" class="logo_img">
                 <div class="logo_text">WordPress интенсив</div>
             </div>
 
-            <h1 class="title">Создать свой сайт на WordPress </h1>
-            <div class="simple">
-                <h2 class="title_big">это просто!</h2>
-                <div class="line"></div>
-            </div>
-            <h2 class="title">Куда сложнее сделать это правильно!</h2>
-            <div class="promo_text">Ежедневно в России появляется более 5 000 новых сайтов.<br>И только единицы из них
-                становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте на
-                предстоящем двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!</div>
-            <button class="promo_btn">записаться на интенсив</button>
-            <div class="more">
-                <div class="more_text">Узнать больше об интенсиве</div>
-                <img src="./icons/arrow_down.png" alt="" class="more_img">
 
-            </div>
         </div>
     </section>
 
     <section class="waiting">
-        <div class="container">
+        <!-- <div class="container">
             <h2 class="waiting_header">Что вас ждет в нашем интенсиве?</h2>
             <div class="waiting_divider"></div>
             <div class="waiting_subheader">2 бесплатных полноценных обучающих вебинара, где:</div>
@@ -59,7 +45,7 @@
                         этих показателей!</div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <div class="my-flex-container">
