--- a/skillup/site-lending/index.html
+++ b/skillup/site-lending/index.html
@@ -11,51 +11,27 @@
 </head>
 
 <body>
-    <section class="promo">
+    <section class="page-container">
         <div class="top-line">
-            <div class="logo">
+            <div class="top-logo">
                 <img src="./icons/WebStudio.png" alt="logo" class="logo_img">
-                <div class="logo_text">WordPress интенсив</div>
+
             </div>
-
-
+            <nav>
+                <ul>
+                    <li><a href="default.asp">Home</a></li>
+                    <li><a href="news.asp">News</a></li>
+                    <li><a href="contact.asp">Contact</a></li>
+                    <li><a href="about.asp">About</a></li>
+                </ul>
+            </nav>
         </div>
-    </section>
+        <!-- <div class="header-under-line">
 
-    <section class="waiting">
-        <!-- <div class="container">
-            <h2 class="waiting_header">Что вас ждет в нашем интенсиве?</h2>
-            <div class="waiting_divider"></div>
-            <div class="waiting_subheader">2 бесплатных полноценных обучающих вебинара, где:</div>
-            <div class="waiting_wrapper">
-                <div class="waiting_item">
-                    <img src="./img/waiting/waiting_1.png" alt="item1" class="waiting_img">
-                    <div class="waiting_descr">Всего за два бесплатных вебинара мы научим вас,
-                        как создать свой сайт на WordPress. </div>
-                </div>
-                <div class="waiting_item">
-                    <img src="./img/waiting/waiting_2.png" alt="item2" class="waiting_img">
-                    <div class="waiting_descr">Покажем, как правильно оптимизировать сайт и сделать его привлекательным
-                        для поисковых систем. Только свежая, профессиональная и актуальная информация!</div>
-                </div>
-                <div class="waiting_item">
-                    <img src="./img/waiting/waiting_3.png" alt="item3" class="waiting_img">
-                    <div class="waiting_descr">Вы узнаете, что такое «хорошая индексация»,«высокая посещаемость»,
-                        «стабильный прирост посетителей», «ТОП по запросам» и, что намного важнее, как добиться всех
-                        этих показателей!</div>
-                </div>
-            </div>
         </div> -->
     </section>
 
-    <div class="my-flex-container">
-        <div class="my-flex-block">item1</div>
-        <div class="my-flex-block">item2</div>
-        <div class="my-flex-block">item3</div>
-        <div class="my-flex-block">item4</div>
-        <div class="my-flex-block">item5</div>
-    </div>
-    <div class="waiting"></div>
+
 </body>
 
 </html>
