--- a/skillup/site-lending/index.html
+++ b/skillup/site-lending/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@400;500&display=swap"
+        rel="stylesheet">
+
     <title>WordPress интенсив</title>
 </head>
 
@@ -17,18 +22,60 @@
                 <img src="./icons/WebStudio.png" alt="logo" class="logo_img">
 
             </div>
-            <nav>
+            <div class="top-line-menu">
                 <ul>
-                    <li><a href="default.asp">Home</a></li>
-                    <li><a href="news.asp">News</a></li>
-                    <li><a href="contact.asp">Contact</a></li>
-                    <li><a href="about.asp">About</a></li>
+                    <li><a href="#">Студия</a></li>
+                    <li><a href="#">Портфолио</a></li>
+                    <li><a href="#">Контакты</a></li>
                 </ul>
-            </nav>
+            </div>
+            <div class="top-info-email">
+                info@devstudio.com
+            </div>
+            <div class="top-info-phone">
+                +38 096 111 11 11
+            </div>
         </div>
-        <!-- <div class="header-under-line">
+        <div class="header-under-line">
+            <div class="main-label">
+                ЭФФЕКТИВНЫЕ РЕШЕНИЯ </br> ДЛЯ ВАШЕГО БИЗНЕСА
+            </div>
+            <button class="order">
+                Заказать услугу
+            </button>
+        </div>
+        <div class="details">
+            <div class="details-blocks">
+                <div class="details-block-title">Внимание к деталям</div>
+                <div class="details-block-text">Идейные соображения, а также начало повседневной работы по формированию
+                    позиции.</div>
+            </div>
+            <div class="details-blocks">
+                <div class="details-block-title">Пунктуальность</div>
+                <div class="details-block-text">Задача организации, в особенности же рамки и место обучения кадров
+                    влечет за собой.</div>
+            </div>
+            <div class="details-blocks">
+                <div class="details-block-title">Планирование</div>
+                <div class="details-block-text">Равным образом консультация с широким активом в значительной степени
+                    обуславливает.</div>
+            </div>
+            <div class="details-blocks">
+                <div class="details-block-title">Современные технологии</div>
+                <div class="details-block-text">Значимость этих проблем настолько очевидна, что реализация плановых
+                    заданий.</div>
+            </div>
+        </div>
+        <div class="what-we-doing">
+            <div class="what-we-doing-title">Чем мы занимаемся</div>
+            <div class="what-we-doing-pictures">
+                <div class="block-pictures"></div>
+                <div class="block-pictures"></div>
+                <div class="block-pictures"></div>
+            </div>
 
-        </div> -->
+
+        </div>
     </section>
 
 
