--- a/skillup/site-lending/index.html
+++ b/skillup/site-lending/index.html
@@ -17,65 +17,115 @@
 
 <body>
     <section class="page-container">
-        <div class="top-line">
-            <div class="top-logo">
-                <img src="./icons/WebStudio.png" alt="logo" class="logo_img">
+        <div class="blocks-container">
+            <div class="top-line">
+                <div class="top-logo">
+                    <img src="./icons/WebStudio.png" alt="logo" class="logo_img">
+
+                </div>
+                <div class="top-line-menu">
+                    <ul>
+                        <li><a href="#">Студия</a></li>
+                        <li><a href="#">Портфолио</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="top-info-email">
+                    info@devstudio.com
+                </div>
+                <div class="top-info-phone">
+                    +38 096 111 11 11
+                </div>
+            </div>
+            <div class="header-under-line">
+                <div class="main-label">
+                    ЭФФЕКТИВНЫЕ РЕШЕНИЯ </br> ДЛЯ ВАШЕГО БИЗНЕСА
+                </div>
+                <button class="order">
+                    Заказать услугу
+                </button>
+            </div>
+            <div class="details">
+                <div class="details-blocks">
+                    <div class="details-block-title">Внимание к деталям</div>
+                    <div class="details-block-text">Идейные соображения, а также начало повседневной работы по
+                        формированию
+                        позиции.</div>
+                </div>
+                <div class="details-blocks">
+                    <div class="details-block-title">Пунктуальность</div>
+                    <div class="details-block-text">Задача организации, в особенности же рамки и место обучения кадров
+                        влечет за собой.</div>
+                </div>
+                <div class="details-blocks">
+                    <div class="details-block-title">Планирование</div>
+                    <div class="details-block-text">Равным образом консультация с широким активом в значительной степени
+                        обуславливает.</div>
+                </div>
+                <div class="details-blocks">
+                    <div class="details-block-title">Современные технологии</div>
+                    <div class="details-block-text">Значимость этих проблем настолько очевидна, что реализация плановых
+                        заданий.</div>
+                </div>
+            </div>
+            <div class="what-we-doing">
+                <div class="what-we-doing-title">Чем мы занимаемся</div>
+                <div class="what-we-doing-pictures">
+                    <div class="block-pictures">
+                        <img src="./img/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
+                            alt="programmer">
+                    </div>
+                    <div class="block-pictures">
+                        <img src="./img/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
+                            alt="web-ui-disigner">
+                    </div>
+                    <div class="block-pictures">
+                        <img src="./img/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
+                            alt="artist">
+                    </div>
+                </div>
+
 
             </div>
-            <div class="top-line-menu">
-                <ul>
-                    <li><a href="#">Студия</a></li>
-                    <li><a href="#">Портфолио</a></li>
-                    <li><a href="#">Контакты</a></li>
-                </ul>
-            </div>
-            <div class="top-info-email">
-                info@devstudio.com
-            </div>
-            <div class="top-info-phone">
-                +38 096 111 11 11
-            </div>
-        </div>
-        <div class="header-under-line">
-            <div class="main-label">
-                ЭФФЕКТИВНЫЕ РЕШЕНИЯ </br> ДЛЯ ВАШЕГО БИЗНЕСА
-            </div>
-            <button class="order">
-                Заказать услугу
-            </button>
-        </div>
-        <div class="details">
-            <div class="details-blocks">
-                <div class="details-block-title">Внимание к деталям</div>
-                <div class="details-block-text">Идейные соображения, а также начало повседневной работы по формированию
-                    позиции.</div>
-            </div>
-            <div class="details-blocks">
-                <div class="details-block-title">Пунктуальность</div>
-                <div class="details-block-text">Задача организации, в особенности же рамки и место обучения кадров
-                    влечет за собой.</div>
-            </div>
-            <div class="details-blocks">
-                <div class="details-block-title">Планирование</div>
-                <div class="details-block-text">Равным образом консультация с широким активом в значительной степени
-                    обуславливает.</div>
-            </div>
-            <div class="details-blocks">
-                <div class="details-block-title">Современные технологии</div>
-                <div class="details-block-text">Значимость этих проблем настолько очевидна, что реализация плановых
-                    заданий.</div>
-            </div>
-        </div>
-        <div class="what-we-doing">
-            <div class="what-we-doing-title">Чем мы занимаемся</div>
-            <div class="what-we-doing-pictures">
-                <div class="block-pictures"></div>
-                <div class="block-pictures"></div>
-                <div class="block-pictures"></div>
-            </div>
+            <div class="our-team">
+                <div class="our-team-title">
+                    Наша команда
+                </div>
+                <div class="our-team-block-photos">
 
+                    <div class="our-team-photo">
+                        <img src="./img/team/igor.jpg" alt="Igor">
+                        <div class="block-name">Игорь Демьяненко</div>
+                        <div class="block-position">Product Designer</div>
+                    </div>
+                    <div class="our-team-photo">
+                        <img src="./img/team/olga.jpg" alt="Olga">
+                        <div class="block-name">Ольга Репина</div>
+                        <div class="block-position">Frontend Developer</div>
+                    </div>
+                    <div class="our-team-photo">
+                        <img src="./img/team/nikolay.jpg" alt="Nikolay">
+                        <div class="block-name">Николай Тарасов</div>
+                        <div class="block-position">Marketing</div>
+                    </div>
+                    <div class="our-team-photo">
+                        <img src="./img/team/mihail.jpg" alt="Mihail">
+                        <div class="block-name">Михаил Ермаков</div>
+                        <div class="block-position">UI Designer</div>
+                    </div>
+                </div>
+            </div>
+            <div class="block-footer">
+                <div class="footer-logo">
+                    <img src="./icons/WebStudioFooter.png" alt="logo" class="logo_img">
+                </div>
+                <div class="footer-adress">г. Киев, пр-т Леси Украинки, 26</div>
+                <div class="footer-email">info@example.com</div>
+                <div class="footer-phone">+38 099 111 11 11</div>
 
+            </div>
         </div>
+
     </section>
 
 
