--- a/skillup/site-lending/index.html
+++ b/skillup/site-lending/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@400;500&display=swap"
         rel="stylesheet">
 
-    <title>WordPress интенсив</title>
+    <title>WebStudio - разработка сайтов</title>
 </head>
 
 <body>
