--- a/skillup/site-lending/index.html
+++ b/skillup/site-lending/index.html
@@ -45,48 +45,58 @@
                     Заказать услугу
                 </button>
             </div>
-            <div class="details">
-                <div class="details-blocks">
-                    <div class="details-block-title">Внимание к деталям</div>
-                    <div class="details-block-text">Идейные соображения, а также начало повседневной работы по
-                        формированию
-                        позиции.</div>
-                </div>
-                <div class="details-blocks">
-                    <div class="details-block-title">Пунктуальность</div>
-                    <div class="details-block-text">Задача организации, в особенности же рамки и место обучения кадров
-                        влечет за собой.</div>
-                </div>
-                <div class="details-blocks">
-                    <div class="details-block-title">Планирование</div>
-                    <div class="details-block-text">Равным образом консультация с широким активом в значительной степени
-                        обуславливает.</div>
-                </div>
-                <div class="details-blocks">
-                    <div class="details-block-title">Современные технологии</div>
-                    <div class="details-block-text">Значимость этих проблем настолько очевидна, что реализация плановых
-                        заданий.</div>
-                </div>
-            </div>
-            <div class="what-we-doing">
-                <div class="what-we-doing-title">Чем мы занимаемся</div>
-                <div class="what-we-doing-pictures">
-                    <div class="block-pictures">
-                        <img src="./img/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
-                            alt="programmer">
+
+            <div class="center-container">
+                <div class="details">
+                    <div class="details-blocks">
+                        <div class="details-block-title">Внимание к деталям</div>
+                        <div class="details-block-text">Идейные соображения, а также начало повседневной работы по
+                            формированию
+                            позиции.</div>
                     </div>
-                    <div class="block-pictures">
-                        <img src="./img/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
-                            alt="web-ui-disigner">
+                    <div class="details-blocks">
+                        <div class="details-block-title">Пунктуальность</div>
+                        <div class="details-block-text">Задача организации, в особенности же рамки и место обучения
+                            кадров
+                            влечет за собой.</div>
                     </div>
-                    <div class="block-pictures">
-                        <img src="./img/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
-                            alt="artist">
+                    <div class="details-blocks">
+                        <div class="details-block-title">Планирование</div>
+                        <div class="details-block-text">Равным образом консультация с широким активом в значительной
+                            степени
+                            обуславливает.</div>
+                    </div>
+                    <div class="details-blocks">
+                        <div class="details-block-title">Современные технологии</div>
+                        <div class="details-block-text">Значимость этих проблем настолько очевидна, что реализация
+                            плановых
+                            заданий.</div>
                     </div>
                 </div>
+                <div class="what-we-doing">
+                    <div class="what-we-doing-title">Чем мы занимаемся</div>
+                    <div class="what-we-doing-pictures">
+                        <div class="block-pictures">
+                            <img src="./img/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
+                                alt="programmer">
+                        </div>
+                        <div class="block-pictures">
+                            <img src="./img/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
+                                alt="web-ui-disigner">
+                        </div>
+                        <div class="block-pictures">
+                            <img src="./img/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
+                                alt="artist">
+                        </div>
+                    </div>
 
 
+                </div>
+
             </div>
+
+
+
             <div class="our-team">
                 <div class="our-team-title">
                     Наша команда
